# scripture-lens

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
app_data/: index.json
app_data/alignments/irvhin/: 40_matthew.json  43_john.json
app_data/sources/greek/: 40_matthew.json  43_john.json  45_romans.json
app_data/targets/irvhin/: 40_matthew.json  43_john.json  45_romans.json
docs/: architecture.md  development_prompts.md  discovery_summary.md  project_scope.md  testing_plan.md
pages/: comparison.py  completion.py  concordance.py  db_explorer.py  interlinear.py  settings.py
scripts/: build_concordance.py  export_data.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_export.py
tests/unit/: __init__.py  test_constants.py  test_data_loader.py
utils/: __init__.py  constants.py  data_loader.py  llm.py
views/: __init__.py  completion.py  drill_down.py  interlinear_v2.py  scripture.py  settings.py
