[project]
name = "align-dashboard"
version = "0.1.0"
description = "A simple dashboard to view alignment data and statistics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "google-generativeai>=0.8.6",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
